--- a/src/css/productsans.css
+++ b/src/css/productsans.css
@@ -3,6 +3,7 @@
  */
 /* cyrillic */
 @font-face {
+  font-display: block;
   font-family: 'Product Sans';
   font-style: normal;
   font-weight: 400;
@@ -11,6 +12,7 @@
 }
 /* greek */
 @font-face {
+  font-display: block;
   font-family: 'Product Sans';
   font-style: normal;
   font-weight: 400;
@@ -19,6 +21,7 @@
 }
 /* latin-ext */
 @font-face {
+  font-display: block;
   font-family: 'Product Sans';
   font-style: normal;
   font-weight: 400;
@@ -27,6 +30,7 @@
 }
 /* latin */
 @font-face {
+  font-display: block;
   font-family: 'Product Sans';
   font-style: normal;
   font-weight: 400;
