--- a/src/css/roboto.css
+++ b/src/css/roboto.css
@@ -8,6 +8,7 @@
 }
 /* latin-ext */
 @font-face {
+  font-display: block;
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 400;
@@ -16,6 +17,7 @@
 }
 /* latin */
 @font-face {
+  font-display: block;
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 400;
@@ -24,6 +26,7 @@
 }
 /* devanagari */
 @font-face {
+  font-display: block;
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 700;
@@ -32,6 +35,7 @@
 }
 /* latin-ext */
 @font-face {
+  font-display: block;
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 700;
@@ -40,6 +44,7 @@
 }
 /* latin */
 @font-face {
+  font-display: block;
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 700;
@@ -48,6 +53,7 @@
 }
 /* cyrillic-ext */
 @font-face {
+  font-display: block;
   font-family: 'Roboto Slab';
   font-style: normal;
   font-weight: 400;
@@ -56,6 +62,7 @@
 }
 /* cyrillic */
 @font-face {
+  font-display: block;
   font-family: 'Roboto Slab';
   font-style: normal;
   font-weight: 400;
@@ -64,6 +71,7 @@
 }
 /* greek-ext */
 @font-face {
+  font-display: block;
   font-family: 'Roboto Slab';
   font-style: normal;
   font-weight: 400;
@@ -72,6 +80,7 @@
 }
 /* greek */
 @font-face {
+  font-display: block;
   font-family: 'Roboto Slab';
   font-style: normal;
   font-weight: 400;
@@ -80,6 +89,7 @@
 }
 /* vietnamese */
 @font-face {
+  font-display: block;
   font-family: 'Roboto Slab';
   font-style: normal;
   font-weight: 400;
@@ -88,6 +98,7 @@
 }
 /* latin-ext */
 @font-face {
+  font-display: block;
   font-family: 'Roboto Slab';
   font-style: normal;
   font-weight: 400;
@@ -96,6 +107,7 @@
 }
 /* latin */
 @font-face {
+  font-display: block;
   font-family: 'Roboto Slab';
   font-style: normal;
   font-weight: 400;
@@ -104,6 +116,7 @@
 }
 /* cyrillic-ext */
 @font-face {
+  font-display: block;
   font-family: 'Roboto Slab';
   font-style: normal;
   font-weight: 700;
@@ -112,6 +125,7 @@
 }
 /* cyrillic */
 @font-face {
+  font-display: block;
   font-family: 'Roboto Slab';
   font-style: normal;
   font-weight: 700;
@@ -120,6 +134,7 @@
 }
 /* greek-ext */
 @font-face {
+  font-display: block;
   font-family: 'Roboto Slab';
   font-style: normal;
   font-weight: 700;
@@ -128,6 +143,7 @@
 }
 /* greek */
 @font-face {
+  font-display: block;
   font-family: 'Roboto Slab';
   font-style: normal;
   font-weight: 700;
@@ -136,6 +152,7 @@
 }
 /* vietnamese */
 @font-face {
+  font-display: block;
   font-family: 'Roboto Slab';
   font-style: normal;
   font-weight: 700;
@@ -144,6 +161,7 @@
 }
 /* latin-ext */
 @font-face {
+  font-display: block;
   font-family: 'Roboto Slab';
   font-style: normal;
   font-weight: 700;
@@ -152,6 +170,7 @@
 }
 /* latin */
 @font-face {
+  font-display: block;
   font-family: 'Roboto Slab';
   font-style: normal;
   font-weight: 700;
