--- a/src/devicons/devicon.css
+++ b/src/devicons/devicon.css
@@ -1,4 +1,5 @@
 @font-face {
+    font-display: block;
     font-family: 'devicon';
     src:url('./devicon.eot?-hdf3wh');
     src:url('./devicon.eot?#iefix-hdf3wh') format('embedded-opentype'),
